--- a/main.html
+++ b/main.html
@@ -4,10 +4,50 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.box {
+			
+  height: 100px;
+  width: 100px;
+  margin-bottom: 4px;
+  
+}
+		.green {
+  background-color: green;
+}
+		.red {
+  background-color: red;
+}
+		.blue {
+  background-color: blue;
+}
+	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+
+	<div class = "box green" >
+		3
+	</div>
+	<div class = "box green" >
+		4
+	</div>
+	<div class = "box green" >
+		5
+	</div>
+	<div class = "box green" >
+		6
+	</div>
+	<div class = "box green" >
+		7
+	</div>
+	<div class = "box red" >
+		1
+	</div>
+	<div class = "box blue" >
+		2
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
